# Lame

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/linglong/lame/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/libmp3lame/: bitstream.c  id3tag.c  lameutil.c  lameutil.h  machine.h  psymodel.c  util.c
app/src/main/java/com/linglong/lame/: Lame.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/linglong/lame/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
